--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Login to AWS ECR
         id: login-ecr
-        run: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, and Push Docker Image
         env:
