--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
         run: |- 
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
+        working-directory: ./nodeapp
       - name: Deploy Docker Image to EC2
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
