Updated Docker container image on EC2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build, and Push Docker Image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: example-node-app
+          REPOSITORY: DevOps-AWS
           IMAGE_TAG: ${{ github.sha }}
         run: |- 
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -79,7 +79,7 @@ jobs:
       - name: Deploy Docker Image to EC2
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: example-node-app
+          REPOSITORY: DevOps-AWS
           IMAGE_TAG: ${{ github.sha }}
           AWS_DEFAULT_REGION: us-east-1
         uses: appleboy/ssh-action@master
