Updated Docker container image on EC2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Deploy Docker Image to EC2
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: DevOps-AWS
+          REPOSITORY: devops-aws
           IMAGE_TAG: ${{ github.sha }}
           AWS_DEFAULT_REGION: us-east-1
         uses: appleboy/ssh-action@master
