--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,11 +71,11 @@ jobs:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: devops-aws
           IMAGE_TAG: ${{ github.sha }}
-        run: |
+        run: |- 
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG 
         working-directory: ./nodeapp
-
+  
       - name: Deploy Docker Image to EC2
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
