--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,9 +84,9 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
         uses: appleboy/ssh-action@master
         with: 
-          host: ${{ needs.deploy-infra.outputs.SERVER_PUBLIC_IP }}
+          host: ${{ env.SERVER_PUBLIC_IP }}
           username: ubuntu
-          key: ${{ secrets.AWS_SSH_KEY_PRIVATE }}
+          key: ${{ env.AWS_SSH_KEY_PRIVATE }}
           envs: AWS_SSH_KEY_PRIVATE,REGISTRY,REPOSITORY,IMAGE_TAG,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_DEFAULT_REGION,AWS_REGION
           script: |-
             sudo apt update
