--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,7 +86,7 @@ jobs:
         with: 
           host: ${{ env.SERVER_PUBLIC_IP }}
           username: ubuntu
-          key: ${{ env.AWS_SSH_KEY_PRIVATE }}
+          key: ${{ env.PRIVATE_SSH_KEY }}
           envs: AWS_SSH_KEY_PRIVATE,REGISTRY,REPOSITORY,IMAGE_TAG,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_DEFAULT_REGION,AWS_REGION
           script: |-
             sudo apt update
