--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy Docker Image to EC2
         env: 
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: devops-aws
+          REPOSITORY: devops-app-aws
           IMAGE_TAG: ${{ github.sha }}
           AWS_DEFAULT_REGION: us-east-1
         uses: appleboy/ssh-action@master
