--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Build and Push Docker Image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: devops-aws
+          REPOSITORY: devops-app-aws
           IMAGE_TAG: ${{ github.sha }}
         run: |- 
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
